[gd_scene load_steps=17 format=3 uid="uid://ccsd7iopeksax"]

[ext_resource type="Script" uid="uid://iipaop8231qc" path="res://Script/imp.gd" id="1_l7lie"]
[ext_resource type="Texture2D" uid="uid://c230keb05o50j" path="res://Graphics/frames/imp.png" id="2_65clq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_i53qi"]
load_path = "res://.godot/imported/imp_all_anim.png-2abf8d6b1b7c775bf832bad20b14f646.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_p4e6c"]
atlas = SubResource("CompressedTexture2D_i53qi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n4xq"]
atlas = SubResource("CompressedTexture2D_i53qi")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp5vx"]
atlas = SubResource("CompressedTexture2D_i53qi")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uyt1"]
atlas = SubResource("CompressedTexture2D_i53qi")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_anvdd"]
atlas = ExtResource("2_65clq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx5qb"]
atlas = ExtResource("2_65clq")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr5ar"]
atlas = ExtResource("2_65clq")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldn4r"]
atlas = ExtResource("2_65clq")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qpk72"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4e6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n4xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp5vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uyt1")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anvdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx5qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr5ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldn4r")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pkbq"]
size = Vector2(13.5, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iow7o"]
size = Vector2(12, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ox78c"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fmm0"]
bg_color = Color(0.929412, 0.0352941, 0.105882, 1)

[node name="CharacterBody2D" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_l7lie")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_qpk72")
animation = &"Run"
frame_progress = 0.768983
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, -6.75)
shape = SubResource("RectangleShape2D_2pkbq")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_iow7o")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_right = 8.0
offset_bottom = 2.0
theme_override_styles/background = SubResource("StyleBoxFlat_ox78c")
theme_override_styles/fill = SubResource("StyleBoxFlat_5fmm0")
max_value = 20.0
show_percentage = false

[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
